--- a/sparrow.yaml
+++ b/sparrow.yaml
@@ -5,6 +5,7 @@ tasks:
     language: Bash
     code: |
       set -e
+      cd source 
       zef install --deps-only --/test .
       zef test .
       zef install .
